Minor updates to setup.py

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 
-2022 Roland Pihlakas <roland@simplify.ee> https://github.com/levitation-opensource/multiobjective-ai-safety-gridworlds
+2022-2025 Roland Pihlakas <roland@simplify.ee> https://github.com/levitation-opensource/multiobjective-ai-safety-gridworlds
 2019 jvmncs https://github.com/jvmncs
 2018-2019 David Lindner https://github.com/david-lindner/safe-grid-gym and https://github.com/jvmncs/ai-safety-gridworlds
 2018 n0p2 https://github.com/n0p2/
